--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@ GL_grapher/figure/Output-3.png
 *.png
 
 *.xlsx
+
+.Rproj.user/35552BBC/sdb/prop/5307BE1B
+
+.Rproj.user/35552BBC/sdb/prop/69311FE5
+
+.Rproj.user/35552BBC/sdb/prop/INDEX
+
+.Rproj.user/35552BBC/sdb/prop/INDEX
+
+.Rproj.user/35552BBC/sdb/prop/F6168189
+
+.Rproj.user/35552BBC/sdb/prop/INDEX
+
+.Rproj.user/35552BBC/sdb/prop/INDEX
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/816558F8
