--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ GL_grapher/figure/Output-3.png
 .Rproj.user/35552BBC/sdb/prop/INDEX
 
 .Rproj.user/35552BBC/sdb/s-68E7A648/816558F8
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/8298C484
+
+.Rproj.user/35552BBC/sdb/prop/INDEX
