--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 
 GL_grapher/figure/Output-3.png
 
-*.png
-
-*.xlsx
 
 .Rproj.user/35552BBC/sdb/prop/5307BE1B
 
@@ -24,3 +21,5 @@ GL_grapher/figure/Output-3.png
 .Rproj.user/35552BBC/sdb/s-68E7A648/8298C484
 
 .Rproj.user/35552BBC/sdb/prop/INDEX
+
+.Rproj.user/35552BBC/sdb/prop/512B45A8
