--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ GL_grapher/figure/Output-3.png
 .Rproj.user/35552BBC/sdb/prop/INDEX
 
 .Rproj.user/35552BBC/sdb/prop/512B45A8
+
+.Rproj.user/35552BBC/sdb/prop/A2B234B
+
+.Rproj.user/35552BBC/sdb/prop/F7442C01
+
+.Rproj.user/35552BBC/sdb/prop/FF8CA6E8
