--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
 
-GL_grapher/figure/Output-3.png
-
-
-.Rproj.user/35552BBC/sdb/prop/5307BE1B
-
-.Rproj.user/35552BBC/sdb/prop/69311FE5
-
-.Rproj.user/35552BBC/sdb/prop/INDEX
-
-.Rproj.user/35552BBC/sdb/prop/INDEX
-
-.Rproj.user/35552BBC/sdb/prop/F6168189
-
-.Rproj.user/35552BBC/sdb/prop/INDEX
-
-.Rproj.user/35552BBC/sdb/prop/INDEX
-
-.Rproj.user/35552BBC/sdb/s-68E7A648/816558F8
-
-.Rproj.user/35552BBC/sdb/s-68E7A648/8298C484
-
-.Rproj.user/35552BBC/sdb/prop/INDEX
-
-.Rproj.user/35552BBC/sdb/prop/512B45A8
-
-.Rproj.user/35552BBC/sdb/prop/A2B234B
-
-.Rproj.user/35552BBC/sdb/prop/F7442C01
-
-.Rproj.user/35552BBC/sdb/prop/FF8CA6E8
+.DS_Store
+.Rproj.user/35552BBC/
