--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .DS_Store
 .Rproj.user
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rhistory
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
