--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 .Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
 
 .Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
