--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 .Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
 
 .Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
+
+.Rproj.user/35552BBC/sdb/s-68E7A648/lock_file
